# vipyrsec-deobfuscator

./: .gitignore  LICENSE  README.md  exceptions.py  hyperion.py  lzmaspam.py  mantis.py  mantisdeobf.py  pyproject.toml  vore.py
.github/: CODEOWNERS
.github/workflows/: python-publish-pypi.yaml  run_tests.yaml
pyobfuscate_notes/: README.md  base_source.txt  data_classes.py  deobfed.py  deobfed.txt  line_16_ast.txt  line_16_data.py  line_17_and_friends.py  pyconsole_lines.txt  raw_code.txt
src/mantis_deobf/: __main__.py  mantis.py
src/mantis_deobf/deobfuscators/: full_hyperion.py  hyperion.py  lzmaspam.py
src/vipyr_deobf/: cli.py  deobf_base.py  deobf_utils.py  exceptions.py  logging.py  utils.py
src/vipyr_deobf/deobfuscators/: blankobf2.py  fct.py  full_hyperion.py  hyperion.py  lzmaspam.py  not_pyobfuscate.md  not_pyobfuscate.py  pyobfuscate.py  vare.py  vore.py
src/vipyr_deobf/deobfuscators/BlankObf/: blankobf_v2.py
src/vipyr_deobf/deobfuscators/FCT/: fct.py
src/vipyr_deobf/deobfuscators/Hyperion/: hyperion.py
src/vipyr_deobf/deobfuscators/LzmaSpam/: lzmaspam.py
src/vipyr_deobf/deobfuscators/PyObfuscate/: pyobfuscate.py
src/vipyr_deobf/deobfuscators/Vare/: vare.py
src/vipyr_deobf/scanners/: blankobf2_scan.py  fct_scan.py  hyperion_scan.py  lzmaspam_scan.py  pyobfuscate_scan.py  vare_scan.py
tests/blankobf/v2/: sample_array.exp  sample_array.obf  test_blankobf_v2.py
tests/fct/: sample_hello_world.exp  sample_hello_world.obf  test_fct.py
tests/hyperion/: sample_array.exp  sample_array.obf  test_hyperion.py
tests/vare/v1/: sample_hello_world.obf  test_vare_v1.py
tests/vare/v2/: sample_hello_world.obf
