[project]
name = "vipyr-deobf"
version = "0.2.0"
description = "Rewrapping FieryIceStickie's Deobfuscation Tools"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
dependencies = [
    "cryptography",
    "pycryptodome",
]

[project.optional-dependencies]
dev = ["pytest", "isort"]
argcomplete = ["argcomplete"]

[project.urls]
repository = "https://github.com/vipyrsec/vipyrsec-deobfuscator/"

[project.scripts]
vipyr-deobf = "vipyr_deobf.cli:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 5
balanced_wrapping = true
