[project]
name = "vipyr-deobf"
version = "0.2.0"
description = "Rewrapping FieryIceStickie's Deobfuscation Tools"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cryptography",
    "pycryptodome",
    "typing-extensions>=4.13.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
argcomplete = ["argcomplete"]

[project.urls]
repository = "https://github.com/vipyrsec/vipyrsec-deobfuscator/"

[project.scripts]
vipyr-deobf = "vipyr_deobf.cli:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
quote-style = "single"

[tool.isort]
multi_line_output = 5
balanced_wrapping = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportOptionalMemberAccess = false
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImplicitStringConcatenation = false
